--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <i class="fas fa-user-shield"></i>
               </div>
               <h4><a href="https://github.com/patkarmandar/Hosts" target="_blank">Hosts</a></h4>
-              <p>Curated and well-maintained hosts files to block social media, trackers, porn sites & ads</p>
+              <p>Bash script to create a unified host file from multiple sources & lists of curated and well-maintained hosts.</p>
             </div>
           </div>
 
@@ -246,7 +246,7 @@
                 </svg>
                 <i class="fas fa-calculator"></i>
               </div>
-              <h4><a href="https://github.com/patkarmandar/Calculator" target="_blank"></a>Web Calculator</h4>
+              <h4><a href="https://github.com/patkarmandar/Calculator" target="_blank">Web Calculator</a></h4>
               <p>Simple online calculator using HTML/JS and styling with CSS/Bootstrap</p>
             </div>
           </div>
@@ -259,7 +259,7 @@
                 </svg>
                 <i class="fas fa-code"></i>
               </div>
-              <h4><a href="https://github.com/patkarmandar/hosts-creator" target="_blank">Cheatsheets</a></h4>
+              <h4><a href="https://github.com/patkarmandar/Cheatsheets" target="_blank">Cheatsheets</a></h4>
               <p>My Cheatsheets (Short and easier formatted with markdown)</p>
             </div>
           </div>
